add english submission

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,8 @@
 	"searchPage": {
 		"search": "Search",
 		"placeHolder": "Movie's name"
+	},
+	"moviePage": {
+		"error": "Error movie's not found"
 	}
 }
